# synthesizer

./: CMakeLists.txt  Makefile  ProgramContainer.h  ProgramContainer.hpp  Synthesizer.h  Synthesizer.hpp  Type.h  main.cpp
operations/: AddOp.h  GreaterThanOp.h  IdentityOp.h  IntEqualsOp.h  LessThanOp.h  ListAddItemOp.h  MultiplyOp.h  Operation.h  SelectorOp.h  TernaryOp.h
operations/primitive/: IdentityOp.h  SelectorOp.h
programs/: InputProgram.h  IntProgram.h  OneProgram.h  Program.h  Program.hpp  ZeroProgram.h
userDefinedTypes/: List.hpp
utils/: util.h
values/: VBool.h  VInt.h  VStr.h  Value.h
